# afterglow-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_all.sh  run_one.sh
src/afterglow/: __init__.py  cli.py
src/afterglow/filters/: __init__.py  ascii_art.py  bloom.py  crt.py  flow_paint.py  glitch.py  halftone.py  kaleidoscope.py  kuwahara.py  neon_edges.py  perlin_warp.py  pixel_sort.py  reaction_diffusion.py
src/afterglow_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
