[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afterglow-lab"
version = "0.1.0"
description = "A small playground for creative image processing experiments"
readme = "README.md"
authors = [{ name = "Juan Flores", email = "rajdesai58.work@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "Pillow==10.4.0",
  "numpy==2.0.1",
  "scipy==1.13.1",
  "typer==0.12.3",
]

[project.scripts]
afterglow = "afterglow.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["examples"]
